# llm-humanness

./: README.md
detection/: README.md  detection.py  pyproject.toml
experiment/: .eslintrc.js  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  LICENSE  README.md  components.json  firebase.json  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
experiment/.cursor/rules/: smile.mdc
experiment/.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
experiment/.github/workflows/: autofix.yml  deploy-error.yml  deploy.yml  docs-deploy.yml  release.yml
experiment/env/: .env
experiment/plugins/: generate-qr.js  preloader.js  strip-devtool.js
experiment/scripts/: codenamize.cjs  download_data.mjs  force_deploy.sh  generate_git_env.sh  setup_project.sh  update_config.sh
experiment/src/: README.md
experiment/src/builtins/advertisement/: AdvertisementView.vue  StudyPreviewText.vue
experiment/src/builtins/debrief/: DebriefView.vue
experiment/src/builtins/demoTasks/: ExpView.vue  FavoriteColor.vue  FavoriteNumber.vue
experiment/src/builtins/demographicSurvey/: DemographicSurveyView.vue
experiment/src/builtins/deviceSurvey/: DeviceSurveyView.vue
experiment/src/builtins/informedConsent/: InformedConsentModal.vue  InformedConsentView.vue
experiment/src/builtins/instructions/: InstructionsView.vue
experiment/src/builtins/instructionsQuiz/: InstructionsQuiz.vue
experiment/src/core/: MainApp.vue  config.js  main.css  main.js  router.js  smile.css
experiment/src/user/: CLAUDE.md  PresentationModeView.vue  README.md  design.js
(+236 files in other folders)
