[project]
name = "llm-humanness-detection"
version = "0.1.0"
description = "Cognitive anomaly detection using working memory profiles."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bambi>=0.17.2",
    "plotly>=6.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scikit-learn>=1.8.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
    "ty>=0.0.13",
]

[tool.ruff]
line-length = 90
indent-width = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
ignore = ["F722"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
